#pragma once

class Utils
{
public:

		/// Returns a random integer between min (included) and max (excluded).
	static int randomInt( int min = 0, int max = 100 );
};